# .agents

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION_DEMO.md  INSTALLATION_FILES.md  QUICKSTART.md  README.md  START_HERE.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  run.sh  test.sh
agents/: __init__.py
agents/cli/: ascii_art.py
agents/security/: encryption.py  validators.py
agents/utils/: config.py  constants.py  helpers.py  logger.py
docs/: BEGINNER_TIPS.md  CONTRIBUTING.md  QUICKSTART.md
src/: __init__.py  main.py
src/cli/: ascii_art.py  main.py  menu.py  theme.py
src/cli/commands/: __init__.py  agent_commands.py
src/core/: agent.py  orchestrator.py  video_downloader.py
src/security/: encryption.py  validators.py
src/utils/: config.py  helpers.py  logger.py
tests/: conftest.py  test_agent.py  test_security.py  test_utils_helpers.py
