[tool.poetry]
name = "whatsapp-social-agents"
package-mode = false
version = "0.1.0"
description = "Automate social media posting by monitoring WhatsApp groups for video links"
authors = ["Alex Colls Outumuro <alex@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexcolls/.agents"
repository = "https://github.com/alexcolls/.agents"
keywords = ["whatsapp", "instagram", "tiktok", "youtube", "automation", "social-media"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
questionary = "^2.0.1"
cryptography = "^42.0.0"
python-dotenv = "^1.0.0"
instagrapi = "^2.1.0"
yt-dlp = "^2024.1.0"
requests = "^2.31.0"
pyppeteer = "^2.0.0"
playwright = "^1.40.0"
pillow = "^10.2.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.20.0"

[tool.poetry.scripts]
agents = "src.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
